--- a/templates/episodes.html
+++ b/templates/episodes.html
@@ -2,7 +2,15 @@
 
 
 {% block head %}
-
+<style>
+    body {
+        background-image: url('static/img/episodes_background.jpg');
+        background-repeat: no repeat;
+        background-position: center;
+        background-attachment: fixed;
+        background-size: 1450px;
+    }
+    </style>
 {% endblock %}
 
 
