--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ nav ul li {
     display: inline;
     padding: 4px 30px;
     font-size: 25px;
-    background-color: #a1ecff
+    background-color: #a1ecff67;
 }
 
 nav ul li a {
@@ -25,3 +25,8 @@ nav ul li a {
     text-decoration: none;
     color: rgb(0, 48, 66);
   }
+
+a:hover{
+    color: rgb(145, 145, 145);
+    transform: translate(10px,10px)
+}
