--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
+    <button class="button back">&larr;</button>
+    <button class="button forward">&rarr;</button>
+    <button class="button refresh">&#8635;</button>
+    <a href="{{ url_for('index') }}"><button class="button home">&#8962;</button></a>
     {% block head %}{% endblock %}
 </head>
 <body>
