--- a/templates/music.html
+++ b/templates/music.html
@@ -3,13 +3,12 @@
 
 {% block head %}
 <style>
-    body {
-        background-image: url('static/img/music_background.jpg');
-        background-repeat: no repeat;
-        background-position: center;
-        background-attachment: fixed;
-        background-size: 1450px;
-    }
+body {
+    background-image: url('static/img/music_background.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
 </style>
 {% endblock %}
 
