--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,9 @@
 <style>
 body {
     background-image: url('static/img/index_background.jpg');
-    background-repeat: no repeat;
+    background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    background-size: 1450px;
 }
 </style>
 {% endblock %}
