--- a/templates/music.html
+++ b/templates/music.html
@@ -2,6 +2,7 @@
 
 
 {% block head %}
+<a href="{{ url_for('music') }}"><button class="button refresh">&#8635;</button></a>
 <style>
 body {
     background-image: url('static/img/music_background.jpg');
@@ -14,5 +15,8 @@ body {
 
 
 {% block body %}
+
+<p>Music from Adventure Time coming soon...</p>
+
 
 {% endblock %}
