--- a/templates/episodes.html
+++ b/templates/episodes.html
@@ -44,7 +44,5 @@ body {
     </form>
 </div>
 
-<p>Data of episode (title, description, rating) outputs below...</p>
-
-
+<p>Data of episode (season_number, episode_number, title, airdate, rating, desc) outputs below...</p>
 {% endblock %}
