--- a/templates/episodes.html
+++ b/templates/episodes.html
@@ -17,7 +17,6 @@ body {
 <h1>Episodes</h1>
 <div>
     <h2>There are over 200 episodes of Adventure Time!</h2>
-    <h3>Read information about an episode</h3>
 </div>
 <!-- --------------------------------FORM------------------------------------------- -->
 <form id=search action="/search_results" method="POST">
@@ -39,7 +38,54 @@ body {
   <input type="submit" value="Search">
 </form>
 <!-- --------------------------------------------------------------------------- -->
-<p>Data of episode (season_number, episode_number, title, airdate, rating, desc) outputs below...</p>
+<table class="table">
+  <tbody>
+    <tr>
+      <th>Season</th>
+      <th># of Episodes</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>26</td>
+    </tr> 
+    <tr>
+      <td>2</td>
+      <td>26</td>
+    </tr> 
+    <tr>
+      <td>3</td>
+      <td>26</td>
+    </tr> 
+    <tr>
+      <td>4</td>
+      <td>26</td>
+    </tr> 
+    <tr>
+      <td>5</td>
+      <td>52</td>
+    </tr> 
+    <tr>
+      <td>6</td>
+      <td>43</td>
+    </tr> 
+    <tr>
+      <td>7</td>
+      <td>26</td>
+    </tr> 
+    <tr>
+      <td>8</td>
+      <td>27</td>
+    </tr> 
+    <tr>
+      <td>9</td>
+      <td>14</td>
+    </tr> 
+    <tr>
+      <td>10</td>
+      <td>16</td>
+    </tr> 
+  </tbody>
+</table>
 {% endblock %}
 
 
