--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,19 @@ body {
 
 {% block body %}
 <div id="container">
-    <h1>Welcome to the Adventure Time: The Episode Guide!</h1>
-    <h3>View a list of episodes of the hit television show...Adventure Time!</h3>
+    <h1>Adventure Time: The Episode Guide!</h1>
+    <h3>A list of episodes of the hit television show...Adventure Time!</h3>
+</div>
+<div class="container2">
+<div class="bmo">
+<img src="static/img/bmo.gif"/>
+</div>
+<div class="jake">
+<img src="static/img/jake.gif"/>
+</div>
+<div class="finn">
+<img src="static/img/finn.gif"/>
+</div>
 </div>
 
 
