--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         <ul>
           <li><a href="{{ url_for('index') }}">Home</a></li>
           <li><a href="{{ url_for('episodes') }}">Episodes</a></li>
+          <li><a href="https://www.imdb.com/title/tt1305826/">More Informaion</a></li>
         </ul>
     </nav>
     {% block body %}{% endblock %}
